# transparent_channel

./: Cargo.toml  README.md
src/: lib.rs
src/request/: block.rs  error.rs  mod.rs  stream.rs
src/transparent/: mod.rs  transparent.rs
tests/: batch_bytes.rs
