[package]
edition = "2021"
name = "TransparentChannel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
bytes = "1.1.0"
image = "0.23.14"
reqwest = {version = "0.11", features = ["blocking", "stream"]}
stream = "0.1.1"
tokio = {version = "1", features = ["full"]}
